# backups

./: README.md
Untitled Folder/: Doxyfile  EULA.txt  New.cpp  New.cu  algo.txt  cuda.cu  einstine riddle  ga_tutorial.cpp  ganew.c  jpt.c  ndh.c  rost.cl.txt  sphere.c  test.c
Untitled Folder/image-usb-stick/: image-usb-stick
cuda/Exercises/cudaMallocAndMemcpy/: cudaMallocAndMemcpy.cu
cuda/Exercises/myFirstKernel/: myFirstKernel.cu
cuda/Exercises/reverseArray/: reverseArray_multiblock.cu  reverseArray_multiblock_fast.cu  reverseArray_singleblock.cu
cuda/cudpp_src_1.1.1/common/: common.mk  cutil.vcproj  cutil_vc90.sln  cutil_vc90.vcproj  paramgl.vcproj  paramgl_vc90.sln  paramgl_vc90.vcproj
cuda/cudpp_src_1.1.1/cudpp/: changelog.txt  cudpp.sln  cudpp.vcproj  cudpp_vc90.sln  cudpp_vc90.vcproj
cuda/cudpp_src_1.1.1/linux_build/: common.mk
cuda/mcuda/: README  install.sh
cuda/ray tracing/: Ray Tracing on GPU.ppt  real time ray tracing.doc
genetic algorithms/Basic_Genetic_Algorithm prog/basic ga prog/: Basic_Genetic_Algorithm.dsp  Basic_Genetic_Algorithm.dsw  ga_tutorial.cpp
genetic algorithms/Basic_Genetic_Algorithm prog/ga prog/: CController.cpp  CController.h  Cga.cpp  Cga.h  defines.h  geometry.cpp  geometry.h  main.cpp  pathfinder.dsp  utils.cpp  utils.h
genetic algorithms/ga/: a.out  ehwack  ga1.c  new file  newfile.c
genetic algorithms/ga coding/: gahelloworld.cpp
genetic algorithms/galib247/examples/: ex1  ex10  ex11  ex12  ex13  ex14  ex15  ex16  ex17  ex18  ex19  ex2  ex20  ex21  ex22  ex23  ex24  ex25  ex26  ex27  ex3  ex4  ex5  ex6  ex7  ex8  ex9  randtest  test_results.txt  test_stats.txt
gpu_rng/: Makefile  gpu.cu  gpu.hpp  main.cpp
rosenbrock/ga_rosenbrock/intuac.com/: rosenbrock.cpp  simplex.cpp  simplex.h
rosenbrock/ga_rosenbrock/pagmo.sourceforge.net/: rosenbrock.cpp
vhdl code/SGA/: input  rga1.c
vhdl code/freehdl-0.0.7/: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  README.AIRE  README.gen-nodes  README.libraries  README.v2cc  README.vaul  aclocal.m4  configure  configure.ac  freehdl.pc.in  v2cc.libs
vhdl code/freehdl-0.0.7/FHDLgui/: FHDLgui  INSTALL  Makefile.am  Makefile.in
vhdl code/freehdl-0.0.7/FHDLgui/pictures/: Makefile.am  Makefile.in
vhdl code/freehdl-0.0.7/cdfggen/: Makefile.am  Makefile.in  cdfggen-chunk.cc
vhdl code/freehdl-0.0.7/doc/: ChangeLog  Makefile.am  Makefile.in  fire.info  fire.texi  fireref.texi  fireref.texi.in  freehdl-config.1  freehdl-gennodes.1  freehdl-v2cc.1  gen-nodes.grammar  gvhdl.1  texinfo.tex  v2cc.libs.5
vhdl code/freehdl-0.0.7/examples/: Makefile.am  Makefile.in
vhdl code/freehdl-0.0.7/examples/v2c/: ChangeLog  Makefile.am  Makefile.in  v2c-chunk.cc  v2c-chunk.h  v2c-chunk.t  v2c.cc
vhdl code/freehdl-0.0.7/fire/: ChangeLog  Makefile.am  Makefile.in  fire-chunk.cc  fire-types.cc  test-fire.cc  timeval.h  tree-supp.cc
vhdl code/freehdl-0.0.7/freehdl/: ChangeLog  Makefile.am  Makefile.in  cdfggen-chunk.h  cdfggen-chunk.t  fire-chunk.h  fire-chunk.t  fire-types.h  fire.h  freehdl-config  freehdl-gennodes.in  kernel-Xinfo-data-descriptor.hh  kernel-Xinfo-kind.hh  kernel-acl.hh  kernel-attributes.hh  kernel-classes.hh  kernel-db.hh  kernel-delayed-procedure-base.hh  kernel-driver-info.hh  kernel-dump.hh  kernel-error.hh  kernel-fhdl-stream.hh  kernel-flags.hh  kernel-global-event-queue.hh  kernel-handle-info.hh  kernel-handle.hh  kernel-kernel-class.hh  kernel-list.hh  kernel-map-list.hh  kernel-name-stack.hh  kernel-pcounter.hh  kernel-persistent-cdfg-dump.hh  kernel-persistent-dump.hh  kernel-process-base.hh  kernel-reader-info.hh  kernel-register.hh  kernel-resolver-descriptor.hh  kernel-resolver-process.hh  kernel-sig-info.hh  kernel-sigacl-list.hh  (+29 more)
vhdl code/freehdl-0.0.7/ieee/: ChangeLog  Makefile.am  Makefile.in  math_real.cc  numeric_bit.cc  numeric_std.cc  numeric_std.vhdl  std_logic_1164.cc  std_logic_1164.vhdl  std_logic_arith.cc  std_logic_arith.vhdl  std_logic_signed.cc  std_logic_unsigned.cc  std_logic_unsigned.vhdl  vital_timing.cc  vital_timing.vhdl
vhdl code/freehdl-0.0.7/kernel/: ChangeLog  Makefile.am  Makefile.in  acl.cc  attributes.cc  db.cc  driver_info.cc  dump.cc  error.cc  fhdl_stream.cc  global_event_queue.cc  handle.cc  kernel_class.cc  main.cc  map_list.cc  name_stack.cc  pcounter.cc  persistent_cdfg_dump.cc  persistent_dump.cc  process_base.cc  reader_info.cc  register.cc  resolver_descriptor.cc  resolver_process.cc  sig_info.cc  sigacl_list.cc  signal_source_list_array.cc  source_descriptor.cc  stack_trace.cc  wait_info.cc
vhdl code/freehdl-0.0.7/std/: ChangeLog  Makefile.am  Makefile.in  internal_textio.cc  memory.cc  standard.cc  standard.vhdl  textio.vhdl  vhdl_types.cc
vhdl code/freehdl-0.0.7/v2cc/: ChangeLog  HACKING.v2cc  Makefile.am  Makefile.in  adder.vhdl  error.vhdl  gvhdl-local  gvhdl.in  mapping.cc  mapping.h  model.vhdl  model4.vhdl  model5.vhdl  test-mapper.cc  top.vhdl  v2cc-acl.cc  v2cc-cdfg-expr.cc  v2cc-cdfg-impl.cc  v2cc-cdfg-static-expr.cc  v2cc-chunk.cc  v2cc-chunk.h  v2cc-chunk.t  v2cc-const-fold.cc  v2cc-decl.cc  v2cc-explore.cc  v2cc-expr.cc  v2cc-get-type-info.cc  v2cc-impl.cc  v2cc-optimize.cc  v2cc-qid.cc  v2cc-util.cc  v2cc-util.h  v2cc.cc  v2cc.h  x.vhdl  y.vhdl  z.vhdl
vhdl code/freehdl-0.0.7/vaul/: ChangeLog  Makefile.am  Makefile.in  TODO  aprintf.cc  attr.cc  bison-parser.cc  bison-parser.h  bison-parser.yy  blocks.cc  debug.h  decls.cc  dfile.cc  dunit.cc  error.cc  expr.cc  fatal.cc  fold.cc  lexer.cc  lexer.ll  list.cc  mempool.cc  message.cc  pool.cc  printer.cc  ref.cc  stats.cc  subprogs.cc  tree.cc  types.cc  vaprintf.cc  vaul-chunk.cc  vaulgens-chunk.cc  vaulgens-chunk.h  vaulgens-chunk.t  version.cc  vfatal.cc  xmalloc.cc  xrealloc.cc  xstrdup.cc
vhdl code/vhdl/: MainPage  Makefile  Makefile_win  dependencies  doxygenTemplate
vhdl code/vhdl/include/: blockpool.h  const.h  dsym.h  fifo_list.h  hash_serv.h  hat.h  list.h  optflg.h  output.h  pools.h  sparse.h  stack.h  stdtypes.h  str.h  strtable.h  sym.h  symtable.h  sysinc.h  trees.h  type.h  typedefs.h  typetable.h
(+275 files in other folders)
