## -*- makefile -*-
## Process this file with automake to produce Makefile.in

EXTRA_DIST = bouton2.gif button_simulate_pressed.gif button_view_released.gif titre.gif \
	bar.gif button_compile_pressed.gif button_simulate_released.gif compilation.gif \
	waveform_viewing.gif bouton.gif button_compile_released.gif button_view_pressed.gif\
	simulation.gif                     
